Keep message box in header

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
 	<section class="container">
 		<header>
+			<h1>Codenames</h1>
+			<div id="message-box" class="inline-message">加载资源...</div>
 		</header>
 		<div id="root">
-			<div id="message-box" class="inline-message">加载资源...</div>
 		</div>
 		<div id="overlay"></div>
 	</section>
